freshrss-app-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: freshrss-app
  labels:
    name: freshrss-app
