_freshrss-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: freshrss-app
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: freshrss-db
  name: freshrss-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: freshrss-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: freshrss-db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: $freshrss_db
        - name: POSTGRES_PASSWORD
          value: $freshrss_password
        - name: POSTGRES_USER
          value: $freshrss_user
        image: postgres:12-alpine
        imagePullPolicy: ""
        name: freshrss-db
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: db
          name: data
      hostname: freshrss-db
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
