freshrss-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: freshrss-app
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: freshrss-app
  name: freshrss-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: freshrss-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: freshrss-app
    spec:
      containers:
      - env:
        - name: CRON_MIN
          value: '*/20'
        - name: TZ
          value: Europe/Paris
        image: freshrss/freshrss:latest
        imagePullPolicy: ""
        name: freshrss-app
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/FreshRSS/data
          subPath: data
          name: data
        - mountPath: /var/www/FreshRSS/extensions
          subPath: extensions
          name: data
      - env:
        - name: POSTGRES_DB
          value: freshrss
        - name: POSTGRES_PASSWORD
          value: freshrss
        - name: POSTGRES_USER
          value: freshrss
        image: postgres:12-alpine
        imagePullPolicy: ""
        name: freshrss-db
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: db
          name: data
      hostname: freshrss-app
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
