freshrss-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: freshrss-app
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: freshrss-app
  name: freshrss-app-service
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: freshrss-app
status:
  loadBalancer: {}
