freshrss-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: freshrss-app-ingress
  namespace: freshrss-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - rss.sorinmircea.com
    - www.rss.sorinmircea.com
    secretName: freshrss-sorinmircea-tls
  rules:
  - host: rss.sorinmircea.com
    http:
      paths:
      - backend:
          serviceName: freshrss-app-service
          servicePort: 80
